k8s/ingress/sample-ingress-config.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-sample-ingress
spec:
  rules:
    - host: my-app.com  #browser URL will go to my-service, forward request to internal service.
      http: #httml protocol.
        paths: # url path, ** after the domain in URL.
            backend:
              service:
                name: my-service
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-service #this service name should be same service name mentined in ingress
spec:
  selector:
    app: my-app
  # type is default type which is ClusteIP
  ports:
    - protocol: TCP
      port: 8080 # this port shold be same as ingres rules port
      targetPort: 8080 # continaer port should be same
      #no nodePort required here
